--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "SENG513 ChatBox",
 	"version": "0.0.1",
-	"description": "seng513 assignment3"
+	"description": "seng513 assignment3",
 	"dependencies": {}
 }
